# vicon_data_server

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
include/: ViconDataServer.h  ViconFrame.h
python/: vicon_animate.py  vicon_data_client.py  vicon_data_client_rb.py  vicon_object_centroid.py  vicon_plotter.py
scripts/: build.sh  install_deps.sh
src/: ViconDataServer.cpp
